added a sorted cardList in GameControllerImpl